syntax = "proto3";
package agents;

option csharp_namespace = "Microsoft.AutoGen.Abstractions";

message AgentState {
  string message = 1;
}
